[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/options_screen.gd" type="Script" id=1]
[ext_resource path="res://styles/screen_back.tres" type="StyleBox" id=2]
[ext_resource path="res://fonts/heading.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/content.tres" type="DynamicFont" id=4]
[ext_resource path="res://styles/key_button.tres" type="StyleBox" id=5]
[ext_resource path="res://styles/button.tres" type="StyleBox" id=6]

[node name="OptionsScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 311.0
margin_top = 129.0
margin_right = 649.0
margin_bottom = 411.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 337.0
margin_bottom = 281.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 336.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "Options"

[node name="GridContainer" type="GridContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 336.0
margin_bottom = 240.0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 2

[node name="SoundLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 2.0
margin_right = 160.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
text = "Sound"

[node name="SoundButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 176.0
margin_right = 336.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "on"

[node name="FullscreenLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 38.0
margin_right = 160.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 4 )
text = "Fullscreen"

[node name="FullscreenButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 176.0
margin_top = 36.0
margin_right = 336.0
margin_bottom = 56.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "off"

[node name="JumpLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 74.0
margin_right = 160.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 4 )
text = "Jump"

[node name="JumpButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 176.0
margin_top = 72.0
margin_right = 336.0
margin_bottom = 92.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Z"

[node name="SkateLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 110.0
margin_right = 160.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 4 )
text = "Skate"

[node name="SkateButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 176.0
margin_top = 108.0
margin_right = 336.0
margin_bottom = 128.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "X"

[node name="DiveLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 146.0
margin_right = 160.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 4 )
text = "Dash"

[node name="DiveButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 176.0
margin_top = 144.0
margin_right = 336.0
margin_bottom = 164.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "C"

[node name="RestartLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 182.0
margin_right = 160.0
margin_bottom = 198.0
custom_fonts/font = ExtResource( 4 )
text = "Respawn"

[node name="RestartButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 176.0
margin_top = 180.0
margin_right = 336.0
margin_bottom = 200.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "R"

[node name="Button" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 336.0
margin_bottom = 280.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 4 )
text = "Back"
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/GridContainer/SoundButton" to="." method="_pressed_sound_button"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/GridContainer/FullscreenButton" to="." method="_pressed_fullscreen_button"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/GridContainer/JumpButton" to="." method="_pressed_rebind_button" binds= [ "jump" ]]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/GridContainer/SkateButton" to="." method="_pressed_rebind_button" binds= [ "skate" ]]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/GridContainer/DiveButton" to="." method="_pressed_rebind_button" binds= [ "dive" ]]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/GridContainer/RestartButton" to="." method="_pressed_rebind_button" binds= [ "restart" ]]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Button" to="." method="_pressed_ok_button"]
